--- a/Aegis.Web/wwwroot/css/app.css
+++ b/Aegis.Web/wwwroot/css/app.css
@@ -1,5 +1,19 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: #222;
+}
+
+.background {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 h1:focus {
