--- a/Aegis.Web/Layout/NavMenu.razor
+++ b/Aegis.Web/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Aegis.Web</a>
+        <a class="navbar-brand" href="">Code And Controller</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +21,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="jokes">
-                <span class="bi bi-emoji-laughing" aria-hidden="true"></span> Counter
+                <span class="bi bi-emoji-laughing" aria-hidden="true"></span> Jokes
             </NavLink>
         </div>
         <div class="nav-item px-3">
