--- a/Aegis.Web/Pages/Weather.razor
+++ b/Aegis.Web/Pages/Weather.razor
@@ -9,11 +9,11 @@
 
 @if (forecasts == null)
 {
-    <p><em>Loading...</em></p>
+    <p class="text-light"><em>Loading...</em></p>
 }
 else
 {
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th>Date</th>
