--- a/Aegis.Web/Layout/NavMenu.razor
+++ b/Aegis.Web/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="friday">
+                <span class="bi bi-friday-calendar" aria-hidden="true"></span> Friday
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-umbrella" aria-hidden="true"></span> Weather
             </NavLink>
