updating video url on YT video

--- a/Aegis.Web/Pages/Friday.razor
+++ b/Aegis.Web/Pages/Friday.razor
@@ -4,7 +4,7 @@
 @if (IsFriday)
 {
     <div class="video-responsive">
-        <iframe src="https://www.youtube.com/embed/1AnG04qnLqI" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/1TewCPi92ro" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
     </div>
