Styling bugs on mobile fixed

--- a/Aegis.Web/Components/ParticleCanvas.razor
+++ b/Aegis.Web/Components/ParticleCanvas.razor
@@ -12,7 +12,31 @@
                 color = "#00FFFF",
                 //color = new []{ "#00FF00","#FF0000","#0000FF"},
                 maxParticles = 90,
-                connectParticles = true
+                connectParticles = true,
+                // responsive = new[]
+                // {
+                //     new {
+                //         breakpoint = 768,
+                //         options = new {
+                //             maxParticles = 200,
+                //             connectParticles = false
+                //         }
+                //     },
+                //     new {
+                //         breakpoint = 425,
+                //         options = new {
+                //             maxParticles = 100,
+                //             connectParticles = true
+                //         }
+                //     },
+                //     new {
+                //         breakpoint = 320,
+                //         options = new {
+                //             maxParticles = 0, // disables particles.js
+                //             connectParticles = false
+                //         }
+                //     }
+                // }
             });
         }
     }
