Misc fixes and adding countdown timer to Friday page

--- a/Aegis.Web/Pages/Counter.razor
+++ b/Aegis.Web/Pages/Counter.razor
@@ -6,13 +6,16 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="(e)=>IncrementCount(e)">Click me</button>
+
+<p>You can also shift-click!</p>
 
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    private void IncrementCount(MouseEventArgs e)
     {
-        currentCount++;
+        currentCount += e.ShiftKey ? 10 : 1;
     }
+
 }
