--- a/Aegis.Web/Pages/Friday.razor
+++ b/Aegis.Web/Pages/Friday.razor
@@ -1,6 +1,6 @@
 ﻿@page "/friday"
 @using Aegis.Web.Components
-<h3>Friday</h3>
+
 
 @if (IsFriday)
 {
@@ -12,7 +12,7 @@
 }
 else
 {
-    <h3>Come back on a Friday!</h3>
+    <h3 class="text-center">Come back on a Friday!</h3>
     <CountdownToFriday />
 }
 
