--- a/Aegis.Web/_Imports.razor
+++ b/Aegis.Web/_Imports.razor
@@ -10,4 +10,7 @@
 @using Aegis.Web.Layout
 @using Aegis.Core.Domain.Enums
 @using Aegis.Core.Services
+@using Blazor.GoogleTagManager
 @inject ToastNotificationService ToastService
+@inject IGoogleTagManager GoogleTagManager
+
