--- a/Aegis.Web/Pages/Resume.razor
+++ b/Aegis.Web/Pages/Resume.razor
@@ -1,6 +1,8 @@
 ﻿@page "/resume"
 @layout NoNav
 
+<PageTitle>Resume</PageTitle>
+
 <div class="container px-4 py-5 bg-dark bg-opacity-75">
     <div class="text-center">
         <img class="mb-4 rounded-circle" src="assets/pictures/profile.jpg" alt="Abdullah Alshibily" style="width: 150px; height: 150px;">
