Adding library, fixing references

--- a/Aegis.Web/_Imports.razor
+++ b/Aegis.Web/_Imports.razor
@@ -11,6 +11,7 @@
 @using Aegis.Core.Domain.Enums
 @using Aegis.Core.Services
 @using Blazor.GoogleTagManager
+@using BlazorBootstrap
 @inject ToastNotificationService ToastService
 @inject IGoogleTagManager GoogleTagManager
 
