--- a/Aegis.Web/Pages/Resume.razor
+++ b/Aegis.Web/Pages/Resume.razor
@@ -32,7 +32,7 @@
                 <h4>
                     Technical Product Manager
                 </h4>
-                <p class="text-muted">
+                <p class="text-secondary">
                     Luminos Labs (Remote) | Sep 2023 - Present
                 </p>
                 <p>
@@ -46,7 +46,7 @@
                 <h4>
                     Software Engineer - Tech Lead
                 </h4>
-                <p class="text-muted">
+                <p class="text-secondary">
                     Luminos Labs (Remote) | Aug 2022 - Sep 2023
                 </p>
                 <p>
@@ -60,7 +60,7 @@
                 <h4>
                     Software Engineer
                 </h4>
-                <p class="text-muted">
+                <p class="text-secondary">
                     Apprv - Omaha NE (Hybrid) | May 2021 - Feb 2022
                 </p>
                 <p>
@@ -74,7 +74,7 @@
                 <h4>
                     Full-Stack Software Developer
                 </h4>
-                <p class="text-muted">
+                <p class="text-secondary">
                     Maxus 33 - Omaha NE (Hybrid) | Jul 2019 - Jan 2021
                 </p>
                 <p>
@@ -187,7 +187,7 @@
             <p>
                 University Of Nebraska at Omaha - Computer Science Bachelors
             </p>
-            <p class="text-muted">
+            <p class="text-secondary">
                 Omaha, NE | 2012 - 2018
             </p>
             <p class="px-4">
