--- a/Aegis.Web/wwwroot/css/app.css
+++ b/Aegis.Web/wwwroot/css/app.css
@@ -218,3 +218,35 @@ code {
     width: 100%;
     height: 100%;
 }
+
+.courses-preview {
+    background-image: url('/assets/images/home/features-texture.webp');
+    background-repeat: repeat;
+    position: relative;
+    
+}
+
+    .courses-preview::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
+        z-index: 1;
+    }
+
+
+    .courses-preview h2, .courses-preview h4, .courses-preview p {
+        color: #FFFFFF;
+        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+        position: relative;
+        z-index: 2;
+    }
+
+    .courses-preview img {
+        /* Ensure the image is not affected by the overlay */
+        position: relative;
+        z-index: 3;
+    }
