Correcting image links

--- a/Aegis.Web/Pages/Home.razor
+++ b/Aegis.Web/Pages/Home.razor
@@ -3,10 +3,10 @@
 <PageTitle>Home</PageTitle>
 
 <!-- Hero Section -->
-<section class="hero text-center bg-dark text-white py-5 ">
+<section class="hero text-center bg-dark text-white py-5 bg-opacity-75">
     <h1>Embark on Your Coding Adventure</h1>
     <p class="lead">Unlock the secrets of coding through the universe of gaming. Start your journey today!</p>
-    <img src="/assets/images/home/hero.webp" alt="Hero Image" class="img-fluid my-3">
+    <img src="./assets/images/home/hero.webp" alt="Hero Image" class="img-fluid my-3">
     <a class="btn btn-primary" href="#" @onclick="ShowComingSoon">Begin Quest!</a>
 </section>
 
@@ -15,17 +15,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 text-center">
-                <img src="/assets/images/home/interactive-coding-challenges.webp" alt="Challenge Icon" class="img-fluid">
+                <img src="./assets/images/home/interactive-coding-challenges.webp" alt="Challenge Icon" class="img-fluid">
                 <h3>Interactive Coding Challenges</h3>
                 <p>Conquer coding challenges inspired by epic gaming quests.</p>
             </div>
             <div class="col-md-4 text-center">
-                <img src="/assets/images/home/video-tutorials.webp" alt="Tutorial Icon" class="img-fluid">
+                <img src="./assets/images/home/video-tutorials.webp" alt="Tutorial Icon" class="img-fluid">
                 <h3>Video Tutorials</h3>
                 <p>Watch and learn as we break down complex coding tasks with game-like tutorials.</p>
             </div>
             <div class="col-md-4 text-center">
-                <img src="/assets/images/home/community-support.webp" alt="Community Icon" class="img-fluid">
+                <img src="./assets/images/home/community-support.webp" alt="Community Icon" class="img-fluid">
                 <h3>Community Support</h3>
                 <p>Join our community of fellow coding adventurers to share tips, tricks, and triumphs.</p>
             </div>
@@ -39,17 +39,17 @@
         <h2 class="text-center">Featured Courses</h2>
         <div class="row">
             <div class="col-md-4">
-                <img src="/assets/images/home/game-development.webp" alt="Game Development Course" class="img-fluid">
+                <img src="./assets/images/home/game-development.webp" alt="Game Development Course" class="img-fluid">
                 <h4>Introduction to Game Development with C#</h4>
                 <p>Dive into game development by creating your first game.</p>
             </div>
             <div class="col-md-4">
-                <img src="/assets/images/home/javascript-quest.webp" alt="JavaScript Course" class="img-fluid">
+                <img src="./assets/images/home/javascript-quest.webp" alt="JavaScript Course" class="img-fluid">
                 <h4>JavaScript Quests: Front-End Adventures</h4>
                 <p>Embark on front-end adventures with JavaScript.</p>
             </div>
             <div class="col-md-4">
-                <img src="/assets/images/home/mastering-unity.webp" alt="Unity Course" class="img-fluid">
+                <img src="./assets/images/home/mastering-unity.webp" alt="Unity Course" class="img-fluid">
                 <h4>Mastering Unity: From Novice to Knight</h4>
                 <p>Level up your game development skills with Unity.</p>
             </div>
