--- a/Aegis.Web/Pages/Home.razor
+++ b/Aegis.Web/Pages/Home.razor
@@ -7,7 +7,9 @@
     <h1>Embark on Your Coding Adventure</h1>
     <p class="lead">Unlock the secrets of coding through the universe of gaming. Start your journey today!</p>
     <img src="./assets/images/home/hero.webp" alt="Hero Image" class="img-fluid my-3">
-    <a class="btn btn-primary" href="#" @onclick="ShowComingSoon">Begin Quest!</a>
+    <div>
+        <a class="btn btn-primary" href="#" @onclick="ShowComingSoon">Begin Quest!</a>
+    </div>
 </section>
 
 <!-- Features Section -->
