--- a/Aegis.Web/Layout/MainLayout.razor
+++ b/Aegis.Web/Layout/MainLayout.razor
@@ -45,7 +45,7 @@
                 Id = "100",
                 IconName = IconName.HouseDoorFill,
                 Text = "Home",
-                Href = "/",
+                Href = "",
                 Match = NavLinkMatch.All
             },
             new NavItem
@@ -53,7 +53,7 @@
                 Id = "200",
                 IconName = IconName.PlusSquareFill,
                 Text = "Counter",
-                Href = "/counter",
+                Href = "counter",
                 Match = NavLinkMatch.All
             },
             new NavItem
@@ -61,7 +61,7 @@
                 Id = "300",
                 IconName = IconName.EmojiLaughingFill,
                 Text = "Jokes",
-                Href = "/jokes",
+                Href = "jokes",
                 Match = NavLinkMatch.All
             },
             new NavItem
@@ -69,7 +69,7 @@
                 Id = "400",
                 IconName = IconName.CalendarDayFill,
                 Text = "Friday",
-                Href = "/friday",
+                Href = "friday",
                 Match = NavLinkMatch.All
             },
             new NavItem
@@ -77,7 +77,7 @@
                 Id = "500",
                 IconName = IconName.UmbrellaFill,
                 Text = "Weather",
-                Href = "/weather",
+                Href = "weather",
                 Match = NavLinkMatch.All
             }
         };
