--- a/Aegis.Web/Pages/Weather.razor
+++ b/Aegis.Web/Pages/Weather.razor
@@ -1,47 +1,80 @@
 ﻿@page "/weather"
+@using Aegis.Core.Domain.Entities
+@using Aegis.Core.Interfaces.Services
+@using Aegis.Web.Components
+@using System.Text.Json
 @inject HttpClient Http
+@inject IHttpClientFactory _clientFactory
 
-<PageTitle>Weather</PageTitle>
+<PageTitle>Weather Alerts</PageTitle>
 
-<h1>Weather</h1>
+<h1>Weather Alerts</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>This component demonstrates fetching weather alerts from the <a href="https://www.weather.gov/documentation/services-web-api" target="_blank">National Weather Service API</a>.</p>
 
-@if (forecasts == null)
+@if(states != null)
 {
-    <p class="text-light"><em>Loading...</em></p>
+    <InputSelect @bind-Value="selectedState" class="form-select mb-3" aria-label="State select dropdown">
+        @foreach (var state in states)
+        {
+            <option value="@state.Value">@state.Key</option>
+        }
+    </InputSelect>
+    <Button @onclick="GetWeather" Color="ButtonColor.Primary">Get State</Button>
 }
-else
+
+@if(Alerts.Count > 0)
 {
-    <table class="table table-dark">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="container py-3">
+        @foreach (var alert in Alerts)
+        {
+            <AlertCard Alert="alert" />
+        }
+    </div>
+}
+else if(NoAlerts)
+{
+    <div class="alert alert-warning text-center" role="alert">
+        <strong>Good News!</strong> No alerts found for this state(@selectedState).
+    </div>
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    //private WeatherForecast[]? forecasts;
+    Dictionary<string, string> states;
+    private string selectedState;
+    private HttpClient _weather;
+    private List<SmallAlert> Alerts = new List<SmallAlert>();
+    private bool NoAlerts = false;
+    [Inject]
+    private IWeatherService weatherService { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        _weather = _clientFactory.CreateClient("weather");
+        //forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        states = await Http.GetFromJsonAsync<Dictionary<string,string>>("sample-data/states.json");
+        if(states.Count > 0)
+        {
+            selectedState = states.FirstOrDefault().Value;
+        }
+    }
+
+    private async Task GetWeather()
+    {
+        Alerts.Clear();
+        try
+        {
+            var response = await weatherService.GetAlertsByState(selectedState);
+            if(response != null)
+            {
+                Alerts = response.ToList();
+            }
+        }
+        catch (JsonException)
+        {
+            NoAlerts = true;
+        }
     }
 
     public class WeatherForecast
